--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API Authentication\n",
-    "New to Plotly's python API? <br> \n",
-    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
-    "Find your api_key here: https://plot.ly/settings/api"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -427,7 +427,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,6 @@
     "\n",
     "# Adding labels\n",
     "for y_trace, label, color in zip(y_data, labels, colors):\n",
-    "\n",
     "    # labeling the left_side of the plot\n",
     "    annotations.append(dict(xref='paper', x=0.05, y=y_trace[0],\n",
     "                                  xanchor='right', yanchor='middle',\n",
@@ -526,7 +525,7 @@
     "                                  font=dict(family='Arial',\n",
     "                                            size=16,\n",
     "                                            color=colors,),\n",
-    "                                  showarrow=False,))\n",
+    "                                  showarrow=False))\n",
     "    # labeling the right_side of the plot\n",
     "    annotations.append(dict(xref='paper', x=0.95, y=y_trace[11],\n",
     "                                  xanchor='left', yanchor='middle',\n",
@@ -534,7 +533,7 @@
     "                                  font=dict(family='Arial',\n",
     "                                            size=16,\n",
     "                                            color=colors,),\n",
-    "                                  showarrow=False,))\n",
+    "                                  showarrow=False))\n",
     "# Title\n",
     "annotations.append(dict(xref='paper', yref='paper', x=0.0, y=1.05,\n",
     "                              xanchor='left', yanchor='bottom',\n",
@@ -542,7 +541,7 @@
     "                              font=dict(family='Arial',\n",
     "                                        size=30,\n",
     "                                        color='rgb(37,37,37)'),\n",
-    "                              showarrow=False,))\n",
+    "                              showarrow=False))\n",
     "# Source\n",
     "annotations.append(dict(xref='paper', yref='paper', x=0.5, y=-0.1,\n",
     "                              xanchor='center', yanchor='top',\n",
@@ -551,7 +550,7 @@
     "                              font=dict(family='Arial',\n",
     "                                        size=12,\n",
     "                                        color='rgb(150,150,150)'),\n",
-    "                              showarrow=False,))\n",
+    "                              showarrow=False))\n",
     "\n",
     "layout['annotations'] = annotations\n",
     "\n",
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -740,15 +739,29 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-sh9QVS-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-5UuJfb-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
       "      Successfully uninstalled publisher-0.10\n",
       "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
-      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
@@ -767,7 +780,7 @@
     "    title = 'Python Line Charts | plotly',\n",
     "    name = 'Line Charts',\n",
     "    thumbnail='thumbnail/line-plot.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='basic', order=3)"
+    "    page_type='example_index', has_thumbnail='true', display_as='basic', order=3.1)"
    ]
   },
   {
