rm unused html files

--- a/_posts/python/bar/bars.ipynb
+++ b/_posts/python/bar/bars.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,6 +152,233 @@
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "py.iplot(fig, filename='stacked-bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bar Chart with Hover Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11820.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "trace0 = go.Bar(\n",
+    "    x=['Product A', 'Product B', 'Product C'],\n",
+    "    y=[20, 14, 23],\n",
+    "    text=['27% market share', '24% market share', '19% market share'],\n",
+    "    marker=dict(\n",
+    "        color='rgb(158,202,225)',\n",
+    "        line=dict(\n",
+    "            color='rgb(8,48,107)',\n",
+    "            width=1.5,\n",
+    "        )\n",
+    "    ),\n",
+    "    opacity=0.6\n",
+    ")\n",
+    "\n",
+    "data = [trace0]\n",
+    "layout = go.Layout(\n",
+    "    title='January 2013 Sales Report',\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='text-hover-bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Styled Bar Chart with Direct Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11822.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "x = ['Product A', 'Product B', 'Product C']\n",
+    "y = [20, 14, 23]\n",
+    "\n",
+    "data = [go.Bar(\n",
+    "            x=x,y=y,\n",
+    "            marker=dict(\n",
+    "                color='rgb(158,202,225)',\n",
+    "                line=dict(\n",
+    "                    color='rgb(8,48,107)',\n",
+    "                    width=1.5),\n",
+    "            ),\n",
+    "            opacity=0.6\n",
+    "        )]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    annotations=[\n",
+    "        dict(x=xi,y=yi,\n",
+    "             text=str(yi),\n",
+    "             xanchor='center',\n",
+    "             yanchor='bottom',\n",
+    "             showarrow=False,\n",
+    "        ) for xi, yi in zip(x, y)]\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='bar-direct-labels')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotated Bar Chart Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11824.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "trace0 = go.Bar(\n",
+    "    x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],\n",
+    "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
+    "    name='Primary Product',\n",
+    "    marker=dict(\n",
+    "        color='rgb(49,130,189)'\n",
+    "    )\n",
+    ")\n",
+    "trace1 = go.Bar(\n",
+    "    x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],\n",
+    "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
+    "    name='Secondary Product',\n",
+    "    marker=dict(\n",
+    "        color='rgb(204,204,204)',\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "data = [trace0, trace1]\n",
+    "layout = go.Layout(\n",
+    "    xaxis=dict(tickangle=-45),\n",
+    "    barmode='group',\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='angled-text-bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Customizing Individual Bar Colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11826.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "trace0 = go.Bar(\n",
+    "    x=['Feature A', 'Feature B', 'Feature C',\n",
+    "       'Feature D', 'Feature E'],\n",
+    "    y=[20, 14, 23, 25, 22],\n",
+    "    marker=dict(\n",
+    "        color=['rgba(204,204,204,1)', 'rgba(222,45,38,0.8)',\n",
+    "               'rgba(204,204,204,1)', 'rgba(204,204,204,1)',\n",
+    "               'rgba(204,204,204,1)']),\n",
+    ")\n",
+    "\n",
+    "data = [trace0]\n",
+    "layout = go.Layout(\n",
+    "    title='Least Used Feature',\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='color-bar')"
    ]
   },
   {
@@ -213,236 +440,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Styled Bar Chart with Direct Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11822.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "x = ['Product A', 'Product B', 'Product C']\n",
-    "y = [20, 14, 23]\n",
-    "\n",
-    "data = [go.Bar(\n",
-    "            x=x,y=y,\n",
-    "            marker=dict(\n",
-    "                color='rgb(158,202,225)',\n",
-    "                line=dict(\n",
-    "                    color='rgb(8,48,107)',\n",
-    "                    width=1.5),\n",
-    "            ),\n",
-    "            opacity=0.6\n",
-    "        )]\n",
-    "\n",
-    "layout = go.Layout(\n",
-    "    annotations=[\n",
-    "        dict(x=xi,y=yi,\n",
-    "             text=str(yi),\n",
-    "             xanchor='center',\n",
-    "             yanchor='bottom',\n",
-    "             showarrow=False,\n",
-    "        ) for xi, yi in zip(x, y)]\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='bar-direct-labels')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rotated Bar Chart Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11824.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "trace0 = go.Bar(\n",
-    "    x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],\n",
-    "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
-    "    name='Primary Product',\n",
-    "    marker=dict(\n",
-    "        color='rgb(49,130,189)'\n",
-    "    )\n",
-    ")\n",
-    "trace1 = go.Bar(\n",
-    "    x=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct',\n",
-    "       'Nov', 'Dec'],\n",
-    "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
-    "    name='Secondary Product',\n",
-    "    marker=dict(\n",
-    "        color='rgb(204,204,204)',\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "data = [trace0, trace1]\n",
-    "layout = go.Layout(\n",
-    "    xaxis=dict(tickangle=-45),\n",
-    "    barmode='group',\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='angled-text-bar')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Customizing Individual Bar Colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11826.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "trace0 = go.Bar(\n",
-    "    x=['Feature A', 'Feature B', 'Feature C', 'Feature D', 'Feature E'],\n",
-    "    y=[20, 14, 23, 25, 22],\n",
-    "    marker=dict(\n",
-    "        color=['rgba(204,204,204,1)', 'rgba(222,45,38,0.8)', 'rgba(204,204,204,1)', 'rgba(204,204,204,1)', 'rgba(204,204,204,1)'],\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "data = [trace0]\n",
-    "layout = go.Layout(\n",
-    "    title='Least Used Feature',\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='color-bar')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bar Chart with Hover Text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11820.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "trace0 = go.Bar(\n",
-    "    x=['Product A', 'Product B', 'Product C'],\n",
-    "    y=[20, 14, 23],\n",
-    "    text=['27% market share', '24% market share', '19% market share'],\n",
-    "    marker=dict(\n",
-    "        color='rgb(158,202,225)',\n",
-    "        line=dict(\n",
-    "            color='rgb(8,48,107)',\n",
-    "            width=1.5,\n",
-    "        )\n",
-    "    ),\n",
-    "    opacity=0.6\n",
-    ")\n",
-    "\n",
-    "data = [trace0]\n",
-    "layout = go.Layout(\n",
-    "    title='January 2013 Sales Report',\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='text-hover-bar')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Colored and Styled Bar Chart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +459,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,16 +469,20 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "trace1 = go.Bar(\n",
-    "    x=[1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012],\n",
-    "    y=[219, 146, 112, 127, 124, 180, 236, 207, 236, 263, 350, 430, 474, 526, 488, 537, 500, 439],\n",
+    "    x=[1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,\n",
+    "       2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012],\n",
+    "    y=[219, 146, 112, 127, 124, 180, 236, 207, 236, 263,\n",
+    "       350, 430, 474, 526, 488, 537, 500, 439],\n",
     "    name='Rest of world',\n",
     "    marker=dict(\n",
     "        color='rgb(55, 83, 109)'\n",
     "    )\n",
     ")\n",
     "trace2 = go.Bar(\n",
-    "    x=[1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012],\n",
-    "    y=[16, 13, 10, 11, 28, 37, 43, 55, 56, 88, 105, 156, 270, 299, 340, 403, 549, 499],\n",
+    "    x=[1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,\n",
+    "       2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012],\n",
+    "    y=[16, 13, 10, 11, 28, 37, 43, 55, 56, 88, 105, 156, 270,\n",
+    "       299, 340, 403, 549, 499],\n",
     "    name='China',\n",
     "    marker=dict(\n",
     "        color='rgb(26, 118, 255)'\n",
@@ -525,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -539,7 +546,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,13 +631,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Horizontal Bar Charts\n",
+    "See examples of horizontal bar charts [here](https://plot.ly/python/horizontal-bar-charts/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reference\n",
     "See https://plot.ly/python/reference/#bar for more information and chart attribute options!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -664,7 +679,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-NygDq1-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-zmYGRU-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -673,6 +688,20 @@
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
