--- a/_posts/r/2015-07-30-axes.md
+++ b/_posts/r/2015-07-30-axes.md
@@ -11,10 +11,6 @@ has_thumbnail: false
 display_as: layout_opt
 ---
 
-
-
-# Modifying Axes Properties in R
-
 ### Style Axes Ticks and Placement
 
 ```r
@@ -123,7 +119,7 @@ plot_ly(x = c(1, 2), y = c(1, 2)) %>%
 library(plotly)
 s <- seq(1, 8)
 plot_ly(x = s, y = exp(s), name = "exponential") %>%
-  add_trace(y =  s, name = "linear") %>%
+  add_trace(x = s, y =  s, name = "linear") %>%
   layout(yaxis = list(type = "log"))
 ```
 
