updated with new privacy settings

--- a/_posts/r/2015-07-30-privacy.md
+++ b/_posts/r/2015-07-30-privacy.md
@@ -17,28 +17,32 @@ Since Version 2.0 (November 15, 2015), Plotly for R renders graphs locally.
 You can publish these graphs to the web with the command `plotly_POST`.
 
 By default, plotly graphs are public.
-You can make them private by setting the `world_readable` argument to `FALSE`.
+You can make them private by setting the `sharing` argument to either `secret` or `private`.
+`private` will make it so that only the creator of the plot(while logged in), is able to 
+view the plot. While `secret` will allow anyone you choose to share the `secret url` with to
+view your plots.
 
+# Render your plots locally
 
 ```r
 library(plotly)
 
 p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
-
-# render locally
 p
 ```
 
+# Generate a public plot
+
 ```r
-# public
 plotly_POST(p, filename="r-docs/public-graph")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/519.embed" width="800" frameBorder="0"></iframe>
 
+# Generate a private plot
+
 ```r
-# private
-plotly_POST(p, world_readable = FALSE, filename="r-docs/private-graph")
+plotly_POST(p, sharing = 'private', filename="r-docs/private-graph")
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/521.embed" width="800" frameBorder="0"></iframe>
